[project]
name = "spring-dynamics"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Wawrzonkowski",email = "j.warzon01@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "numpy (<2.1)",
    "numba (==0.59.1)",
    "pygame (>=2.6.1,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
